# FarmOn-Coding-Challenge-Frontend

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  entrypoint.sh  pyproject.toml
api/app/: README.md  main.py
api/app/db/: db.py
api/app/routers/: parcels.py
api/app/schemas/: schemas.py
api/tests/: conftest.py  test_api.py
data/raw_data/: soil_log_organic_carbon_content_2020.tif  soil_log_organic_carbon_content_2020.tif.aux.xml
frontend/: .env.example  Dockerfile  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Main.tsx  ParcelHistory.tsx  ParcelHistoryLegend.tsx  ParcelMap.tsx  Spinner.tsx
frontend/cypress/: tsconfig.json
frontend/cypress/data/: parcels_data.json
frontend/cypress/e2e/: parcelHistory.cy.ts  utils.cy.ts
frontend/cypress/plugins/: index.js
frontend/hooks/: useParcelData.ts
frontend/types/: types.ts
frontend/utils/: utils.ts
pipelines/: Dockerfile  environment.yml
pipelines/notebooks/: 01 - FarmOn Coding Challenge.ipynb
